Maze navigation description.

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
             <h2><a href="math/mazenavigator/">Maze Navigator</a></h2>
 
-            <p>Posted here unmodified. Written by <a href="https://github.com/goshdarngames/HTML5-Maze">GoshDarnGames</a>. </p>
+            <p>Written by <a href="https://github.com/goshdarngames/HTML5-Maze">GoshDarnGames</a>. I have updated the code to animate the rendering of the maze and have added a "Programmable" variant--under the "Options" tab--where you can input a set of moves and run them.</p>
 
             <p><a href="math/mazenavigator/"><img src="images/mazenavigator.png" alt="Image of Maze Navigator" title="" /></a></p>
 
