Compound Word Match Game

--- a/index.html
+++ b/index.html
@@ -35,9 +35,17 @@
 
             <p>The Dolche Words as a memory game. Goes from Pre-K to Third Grade.</p>
 
-            <p>Credit to <a href="http://codepen.io/jamesbarnett/pen/kiGsl">LOLCatz Memory Game</a> by jamesbarnett and Dolch Site Words from <a href="http://www.mrsperkins.com/files/dolch_book.pdf">Jill Perkins' Workbook</a>.</p>
+            <p>Exended from <a href="http://codepen.io/jamesbarnett/pen/kiGsl">LOLCatz Memory Game</a> by jamesbarnett and Dolch Site Words from <a href="http://www.mrsperkins.com/files/dolch_book.pdf">Jill Perkins' Workbook</a>.</p>
 
             <p><a href="reading/sightwordsmemory/"><img src="images/sightwordsmemory.png" alt="Image of Sight Word Memory" title="" /></a></p>
+
+            <h2><a href="reading/compound/">Compound Word Match Game</a></h2>
+
+            <p>Build compound words from a random selection of over 1,000 words.</p>
+
+            <p>Exended from <a href="http://codepen.io/jamesbarnett/pen/kiGsl">LOLCatz Memory Game</a> by jamesbarnett.</p>
+
+            <p><a href="reading/compound/"><img src="images/compound.png" alt="Image of Compound Word Match Game" title="" /></a></p>
 
             <h2><a href="reading/alphabetrace/">Alphabet Race</a></h2>
 
