--- a/math/basetenblocks/index.html
+++ b/math/basetenblocks/index.html
@@ -54,6 +54,9 @@
         border: solid 1px white;
     }
 
+    a {
+      color: pink;
+    }
 
 .myButton {
   -moz-box-shadow:inset 0px 1px 0px 0px #bee2f9;
@@ -310,6 +313,7 @@ $(document).ready(function() {
       <input type="button" value="Test Answer" onclick="testAnswer();" class="myButton" />
       <input type="button" value="Sound Off" onclick="toggleSound();" class="myButton" id="soundToggle" />
     </form>
+    <p>Part of the <a href="http://ideonexus.github.io/Explorable-Explanations/">Explorable Explanations</a> collection of educational javascript apps.</p>
 </div>
 </body>
 </html>
