--- a/math/coordinates/index.html
+++ b/math/coordinates/index.html
@@ -557,6 +557,7 @@ $(document).ready(function() {
       <input type="button" value="X ABC/123" onclick="toggleAlphaNumeric('x');" class="myButton" />
       <input type="button" value="Y ABC/123" onclick="toggleAlphaNumeric('y');" class="myButton" />
       <input type="button" value="Sound Off" onclick="toggleSound();" class="myButton" id="soundToggle" />
+      <h5>Part of the <a href="http://ideonexus.github.io/Explorable-Explanations/">Explorable Explanations</a> collection of educational javascript apps.</h5>
     </form>
 </div>
 </body>
