--- a/math/numberline/index.html
+++ b/math/numberline/index.html
@@ -563,7 +563,7 @@ $(window).load(function(){
       </form>
     </div>
 <div style="text-align: center;clear: both; padding-top: 10px;">
-<h5 style="color: #000000;">Credit to <a href="http://stackoverflow.com/questions/4182494/how-to-draw-number-lines-using-html">user372551</a> on StackOverflow.</h5>
+<h5 style="color: #000000;">Credit to <a href="http://stackoverflow.com/questions/4182494/how-to-draw-number-lines-using-html">user372551</a> on StackOverflow. Part of the <a href="http://ideonexus.github.io/Explorable-Explanations/">Explorable Explanations</a> collection of educational javascript apps.</h5>
 </div>
 </body>
 </html>
