--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 
             <p><a href="reading/sightwordsmemory/"><img src="images/sightwordsmemory.png" alt="Image of Sight Word Memory" title="" /></a></p>
 
-            <h2><a href="reading/compound/">Compound Word Match Game</a></h2>
+            <h2><a href="reading/compoundwords/">Compound Word Match Game</a></h2>
 
             <p>Build compound words from a random selection of over 1,000 words.</p>
 
             <p>Exended from <a href="http://codepen.io/jamesbarnett/pen/kiGsl">LOLCatz Memory Game</a> by jamesbarnett.</p>
 
-            <p><a href="reading/compound/"><img src="images/compound.png" alt="Image of Compound Word Match Game" title="" /></a></p>
+            <p><a href="reading/compoundwords/"><img src="images/compoundwords.png" alt="Image of Compound Word Match Game" title="" /></a></p>
 
             <h2><a href="reading/alphabetrace/">Alphabet Race</a></h2>
 
