Equivalency math games added.

--- a/index.html
+++ b/index.html
@@ -213,6 +213,18 @@
 
             <p><a href="math/coordinates/"><img src="images/coordinates.png" alt="Image of Coordinate Finder" title="" /></a></p>
 
+            <h2><a href="math/equivalencyhunt/">Equivalency Hunt Game</a></h2>
+
+            <p>Find all of the equations that produce a random number.</p>
+
+            <p><a href="math/equivalencyhunt/"><img src="images/equivalencyhunt.png" alt="Image of Equivalency Hunt Game" title="" /></a></p>
+
+            <h2><a href="math/equivalencymatch/">Equivalency Match Game</a></h2>
+
+            <p>Match equivalent equations.</p>
+
+            <p><a href="math/equivalencymatch/"><img src="images/equivalencymatch.png" alt="Image of Equivalency Match Game" title="" /></a></p>
+
             <h2><a href="math/primefactortree/">Prime Factor Tree Generator</a></h2>
 
             <p>Slightly tweeked from original code by <a href="https://github.com/collectivecognition/primeFactorTree">William Blanchette</a>. Takes any number and breaks it down into a tree of its prime factors.</p>
