--- a/reading/sightwordsmemory/index.html
+++ b/reading/sightwordsmemory/index.html
@@ -52,37 +52,11 @@
       background-color: violet;
     }
 
-    .lismall {
-      width: 20%;
-      height: 20%;      
-    }
-
-    .lilarge {
-      width: 15%;
-      height: 15%;      
-    }
-
-    .lilarger {
-      width: 13%;
-      height: 13%;      
-    }
-
-    .lilarge span, .lilarger span {
-      top: 40%;
-    }
-
     span { 
       font-size: 3em;
       font-weight: bold;
-      color: black;
       position: relative;
       top: 50%;
-    }
-
-    @media only screen and (max-width: 500px) {
-      span {
-        font-size: 2em;
-      }
     }
 
     .face-up {
@@ -95,12 +69,20 @@
         color: black;
     }
 
+    .def {
+        font-size: 0.5em;
+    }
+
     select
     {
         font-size:2em;
         font-weight: bold;
         -webkit-appearance: none;
-        width: 300px !important;
+        width: 25%;
+    }
+    
+    #wordgroup {
+      width: 70%;
     }
 
     #toggle {
@@ -159,6 +141,94 @@
 }
 
 
+.lismall {
+  height: 20%;      
+}
+
+.lilarge {
+  height: 15%;      
+}
+
+.lilarger {
+  height: 13%;      
+}
+
+.lilarge span, .lilarger span {
+  top: 40%;
+}
+
+@media only screen and (max-height : 800px) {
+  span {
+    font-size: 2em;
+    line-height: 0.5em;
+    top: 25%;
+  }
+  h1 {
+    font-size: 1.5em;
+  }
+  select {
+    font-size: 1.5em;
+  }
+  .lismall {
+    height: 10%;
+  }
+  .lilarger {
+    height: 10%;
+  }
+  .lilarge {
+    height: 10%;
+  }
+  #footer {
+    font-size: 0.75em;
+  }
+  .myButton {
+    font-size: 12px;
+    padding:3px 12px;
+  }
+}
+
+
+@media only screen and (max-height : 600px) {
+  span {
+    font-size: 1.5em !important;
+    line-height: 0.5em;
+    top: 25%;
+  }
+  li {
+    height: 10%;
+  }
+  .lismall {
+    height: 10%;
+  }
+  .lilarger {
+    height: 10%;
+  }
+  .lilarge {
+    height: 10%;
+  }
+  #footer {
+    font-size: 0.75em;
+  }
+  .myButton {
+    font-size: 12px;
+    padding:3px 12px;
+  }
+  .info {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .containersmall {
+    width: 98%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  span {
+    font-size: 2em;
+  }
+}
 
 </style>
 
@@ -445,13 +515,6 @@ var changeWordArray = function() {
 var changeNumberOfWords = function() {
     numberOfWords = parseInt($("#numberofwords").val());
     buildWordBlocks();  
-    if (numberOfWords > 10) {
-        $("li").removeClass("lismall").removeClass("lilarge").addClass("lilarger");
-    } else if (numberOfWords > 8) {
-        $("li").removeClass("lismall").removeClass("lilarger").addClass("lilarge");
-    } else {
-        $("li").removeClass("lilarge").removeClass("lilarger").addClass("lismall");
-    }
 }
 
 var soundOn = true;
@@ -621,7 +684,15 @@ var buildWordBlocks = function() {
       };
       
       words.randomize();
-      winAnimation();
+      //winAnimation();
+    }
+
+    if (numberOfWords > 10) {
+        $("li").removeClass("lismall").removeClass("lilarge").addClass("lilarger");
+    } else if (numberOfWords > 8) {
+        $("li").removeClass("lismall").removeClass("lilarger").addClass("lilarge");
+    } else {
+        $("li").removeClass("lilarge").removeClass("lilarger").addClass("lismall");
     }
 }
 
@@ -665,7 +736,7 @@ $(document).ready(function() {
       </select><br/>
       <input type="button" value="New Game" onclick="buildWordBlocks();" class="myButton" />
       <input type="button" value="Sound Off" onclick="toggleSound();" class="myButton" id="soundToggle" /><br/>
-      <p>Built on <a href="http://codepen.io/jamesbarnett/pen/kiGsl">LOLCatz Memory Game</a> by jamesbarnett, Dolch Site Words from <a href="http://www.mrsperkins.com/files/dolch_book.pdf">Jill Perkins' Workbook</a>, and Reading Game words from <a href="http://thereadinggame.com/">Kenneth Hodkinson</a>.</p>
+      <p class="info">Built on <a href="http://codepen.io/jamesbarnett/pen/kiGsl">LOLCatz Memory Game</a> by jamesbarnett, Dolch Site Words from <a href="http://www.mrsperkins.com/files/dolch_book.pdf">Jill Perkins' Workbook</a>, and Reading Game words from <a href="http://thereadinggame.com/">Kenneth Hodkinson</a>.</p>
     </form>
 </div>
 </body>
