Added WordCategories hunt.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
 
             <p><a href="reading/compoundwords/"><img src="images/compoundwords.png" alt="Image of Compound Word Match Game" title="" /></a></p>
 
+            <h2><a href="reading/wordcategories/">Word Categories Hunt Game</a></h2>
+
+            <p>Find all the words that match the category.</p>
+
+            <p><a href="reading/wordcategories/"><img src="images/wordcategories.png" alt="Image of Word Categories Hunt Game" title="" /></a></p>
+
             <h2><a href="reading/alphabetrace/">Alphabet Race</a></h2>
 
             <p>JavaScript alphabet typing game. Teaches childred both alphabetical order and orients them as to where letters are on the keyboard.</p>
