First promotion of Mastermind.

--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
 
             <h1>Science</h1>
 
+            <h2><a href="science/mastermind/">Mastermind</a></h2>
+
+            <p>Reproduction of the board game where you try to guess the color sequence, getting hints about what you have correct with each experiment.</p>
+
+            <p><a href="science/mastermind/"><img src="images/mastermind.png" alt="Image of color matcher" title="" /></a></p>
+
             <h2><a href="science/colormatcher/">Color Matcher</a></h2>
 
             <p>Add red, green, blue values in hexadecimal until you match the background color. Inspired by <a href="https://github.com/LeaVerou/whathecolor">What the Color</a> by <a href="http://lea.verou.me/">Lea Verou</a>.</p>
