Added local references for all files so EEs will run without an internet connection.

--- a/games/gotcha/index.html
+++ b/games/gotcha/index.html
@@ -227,7 +227,7 @@ a {
 }
 </style>
 
-<script src="jquery.js"></script>
+<script src="js/jquery.js"></script>
 
 <script type="text/javascript">
 
@@ -461,7 +461,7 @@ $(document).ready(function() {
         <li class="hex">
           <div class="hexIn">
             <a class="hexLink" href="javascript:void(0);" data-position="1">
-              <img src="stickfigure.png" style="display: none;" />
+              <img src="img/stickfigure.png" style="display: none;" />
               <h1>1</h1>
               <h2>Click to Evade</h2>
             </a>
@@ -470,7 +470,7 @@ $(document).ready(function() {
         <li class="hex">
           <div class="hexIn">
             <a class="hexLink" href="javascript:void(0);" data-position="2">
-              <img src="stickfigure.png" style="display: none;" />
+              <img src="img/stickfigure.png" style="display: none;" />
               <h1>2</h1>
               <h2>Click to Evade</h2>
             </a>
@@ -479,7 +479,7 @@ $(document).ready(function() {
         <li class="hex">
           <div class="hexIn">
             <a class="hexLink" href="javascript:void(0);" data-position="3">
-              <img src="stickfigure.png" style="display: none;" />
+              <img src="img/stickfigure.png" style="display: none;" />
               <h1>3</h1>
               <h2>Click to Evade</h2>
             </a>
@@ -488,7 +488,7 @@ $(document).ready(function() {
         <li class="hex">
           <div class="hexIn">
             <a class="hexLink" href="javascript:void(0);" data-position="4">
-              <img src="stickfigure.png" style="display: none;" />
+              <img src="img/stickfigure.png" style="display: none;" />
               <h1>4</h1>
               <h2>Click to Evade</h2>
             </a>
@@ -497,7 +497,7 @@ $(document).ready(function() {
         <li class="hex">
           <div class="hexIn">
             <a class="hexLink" href="javascript:void(0);" data-position="5">
-              <img src="stickfigure.png" style="display: none;" />
+              <img src="img/stickfigure.png" style="display: none;" />
               <h1>5</h1>
               <h2>Click to Evade</h2>
             </a>
@@ -506,7 +506,7 @@ $(document).ready(function() {
         <li class="hex">
           <div class="hexIn">
             <a class="hexLink" href="javascript:void(0);" data-position="6">
-              <img src="stickfigure.png" style="display: none;" />
+              <img src="img/stickfigure.png" style="display: none;" />
               <h1>6</h1>
               <h2>Click to Evade</h2>
             </a>
@@ -515,7 +515,7 @@ $(document).ready(function() {
         <li class="hex">
           <div class="hexIn">
             <a class="hexLink" href="javascript:void(0);" data-position="7">
-              <img src="stickfigure.png" style="display: none;" />
+              <img src="img/stickfigure.png" style="display: none;" />
               <h1>7</h1>
               <h2>Click to Evade</h2>
             </a>
@@ -529,7 +529,7 @@ $(document).ready(function() {
         <li class="hex">
           <div class="hexIn">
             <a class="hexLink" href="javascript:void(0);" data-position="1">
-              <img src="stickfigure.png" style="display: none;" />
+              <img src="img/stickfigure.png" style="display: none;" />
               <h1>1</h1>
               <h2>Click to Attack</h2>
             </a>
@@ -538,7 +538,7 @@ $(document).ready(function() {
         <li class="hex">
           <div class="hexIn">
             <a class="hexLink" href="javascript:void(0);" data-position="2">
-              <img src="stickfigure.png" style="display: none;" />
+              <img src="img/stickfigure.png" style="display: none;" />
               <h1>2</h1>
               <h2>Click to Attack</h2>
             </a>
@@ -547,7 +547,7 @@ $(document).ready(function() {
         <li class="hex">
           <div class="hexIn">
             <a class="hexLink" href="javascript:void(0);" data-position="3">
-              <img src="stickfigure.png" style="display: none;" />
+              <img src="img/stickfigure.png" style="display: none;" />
               <h1>3</h1>
               <h2>Click to Attack</h2>
             </a>
@@ -556,7 +556,7 @@ $(document).ready(function() {
         <li class="hex">
           <div class="hexIn">
             <a class="hexLink" href="javascript:void(0);" data-position="4">
-              <img src="stickfigure.png" style="display: none;" />
+              <img src="img/stickfigure.png" style="display: none;" />
               <h1>4</h1>
               <h2>Click to Attack</h2>
             </a>
@@ -565,7 +565,7 @@ $(document).ready(function() {
         <li class="hex">
           <div class="hexIn">
             <a class="hexLink" href="javascript:void(0);" data-position="5">
-              <img src="stickfigure.png" style="display: none;" />
+              <img src="img/stickfigure.png" style="display: none;" />
               <h1>5</h1>
               <h2>Click to Attack</h2>
             </a>
@@ -574,7 +574,7 @@ $(document).ready(function() {
         <li class="hex">
           <div class="hexIn">
             <a class="hexLink" href="javascript:void(0);" data-position="6">
-              <img src="stickfigure.png" style="display: none;" />
+              <img src="img/stickfigure.png" style="display: none;" />
               <h1>6</h1>
               <h2>Click to Attack</h2>
             </a>
@@ -583,7 +583,7 @@ $(document).ready(function() {
         <li class="hex">
           <div class="hexIn">
             <a class="hexLink" href="javascript:void(0);" data-position="7">
-              <img src="stickfigure.png" style="display: none;" />
+              <img src="img/stickfigure.png" style="display: none;" />
               <h1>7</h1>
               <h2>Click to Attack</h2>
             </a>
