--- a/math/fractalexplorer/index.html
+++ b/math/fractalexplorer/index.html
@@ -274,7 +274,7 @@ canvas {
 }
 
 </style>
-<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="js/jquery-1.9.1.min.js"></script>
 <script type='text/javascript'>
 
 //Clears Canvas
