--- a/math/mazenavigator/index.html
+++ b/math/mazenavigator/index.html
@@ -168,7 +168,7 @@ select
 
     </style>
 
-<script src="jquery.min.js"></script>
+<script src="js/jquery-1.9.1.min.js"></script>
 <script type="text/javascript">
 
 //define render colours here
