--- a/math/nbacksimon/index.html
+++ b/math/nbacksimon/index.html
@@ -217,7 +217,7 @@ p[data-action="lose"] {
 }
 
 </style>
-<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="js/jquery-1.9.1.min.js"></script>
 <script>
 var simon = {
 	sequence: [],
