--- a/math/numberline/index.html
+++ b/math/numberline/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="js/jquery-1.9.1.min.js"></script>
     <!-- http://stackoverflow.com/questions/4182494/how-to-draw-number-lines-using-html -->
     <title>Numberline</title>
 <style type='text/css'>
