--- a/math/patternblocks/index.html
+++ b/math/patternblocks/index.html
@@ -87,8 +87,8 @@
 	  top:1px;
 	}
 </style>
-<script src="fabric.min.js"></script>
-<script src="jquery.min.js"></script>
+<script src="js/fabric.min.js"></script>
+<script src="js/jquery-1.9.1.min.js"></script>
 <script>
 
 var canvas;
