--- a/math/primefactortree/index.html
+++ b/math/primefactortree/index.html
@@ -186,7 +186,7 @@ p {
 
 </style>
 
-<script type="text/javascript" src="jquery.1.6.1.min.js"></script>
+<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 
 <script type="text/javascript">
 // Simple trial-division factoring
