--- a/math/puzzlearithmetic/index.html
+++ b/math/puzzlearithmetic/index.html
@@ -411,7 +411,7 @@ a {
 
 </style>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="js/jquery-1.9.1.min.js"></script>
 
 <script>
 
