--- a/reading/creativecommonsbookreader/index.html
+++ b/reading/creativecommonsbookreader/index.html
@@ -249,7 +249,7 @@
 
 </style>
 
-<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="js/jquery-1.9.1.min.js"></script>
 <script>
 
 //Book Array: [[page1,[sentence1,sentence2,sentence3]],[page2,[sentence1,sentence2]]];
