--- a/reading/oneletterwordchanger/index.html
+++ b/reading/oneletterwordchanger/index.html
@@ -125,7 +125,7 @@
 }
 
 </style>
-<script type='text/javascript' src='http://code.jquery.com/jquery-2.1.3.js'></script>
+<script type='text/javascript' src='js/jquery-1.9.1.min.js'></script>
 <script>
 shortA = ["pan","bag","cat","man","bat","hat","pat","van","tap","fan","rat","mat","jam","map","can","fat","ham","mad","had","bad","pad","lad","rag","sat","ran","tax","has","lad","gap","wag","gap","gag","lap","rap","yap","gas","lag","dad","cab"," an"," as"," at","ban","tan","wax","was","yam","dam"," ax", " am","cam","cad","vat","tab","tag","fad","fax","ram","jab","lab","lax","sag","sap","sad","gab"];
 shortE = ["hen","ten","bed","net","pen","peg","men","leg","red","web","beg","fed","led","wet","let","pet","set","bet","get","yes","hem","yet","met","vet","wed","vex","den","keg","jet","gem","hex","jem"];
