--- a/reading/onewordsentencechanger/index.html
+++ b/reading/onewordsentencechanger/index.html
@@ -168,7 +168,7 @@
 }
 
 </style>
-<script type='text/javascript' src='http://code.jquery.com/jquery-2.1.3.js'></script>
+<script type='text/javascript' src='js/jquery-1.9.1.min.js'></script>
 <script>
 var animals = ["beetle","bird","cat","chick","cow","crab","dog","dolphin","elephant","fish","fox","frog","giraffe","goat","horse","jellyfish","lion","lobster","mole","mouse","octopus","orca","owl","pig","rabbit","rat","seahorse","seal","shark","sheep","snail","snake","squid","starfish","tiger","whale","wolf","worm","zebra"];
 
