--- a/reading/partsofspeech/index.html
+++ b/reading/partsofspeech/index.html
@@ -79,7 +79,7 @@
 
 </style>
 
-<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="js/jquery-1.9.1.min.js"></script>
 <script>
 
 //Text Array: Title, Link, OriginalText, SeedText
