--- a/reading/wordsearch/index.html
+++ b/reading/wordsearch/index.html
@@ -3,10 +3,10 @@
 <head>
   <title>Word Find</title>
   <link rel="stylesheet" type="text/css" href="styles/style.css">
-<script language="javascript" type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script> 
-<script type="text/javascript" src="scripts/wordfind.js"></script> 
-<script type="text/javascript" src="scripts/wordfindgame.js"></script> 
-<script type="text/javascript" src="scripts/dolchsitewords.js"></script> 
+<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script> 
+<script type="text/javascript" src="js/wordfind.js"></script> 
+<script type="text/javascript" src="js/wordfindgame.js"></script> 
+<script type="text/javascript" src="js/dolchsitewords.js"></script> 
 <script>
 
 
