--- a/math/equivalencyhunt/index.html
+++ b/math/equivalencyhunt/index.html
@@ -311,7 +311,7 @@ input[type=checkbox] {
 
 </style>
 
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="js/jquery-1.9.1.min.js"></script>
 <script>
 
 //http://www.mrsperkins.com/files/dolch_book.pdf
