--- a/math/fractionsvisualizer/index.html
+++ b/math/fractionsvisualizer/index.html
@@ -171,7 +171,7 @@ div.buttonrow {
 
 </style>
 
-<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="js/jquery-1.9.1.min.js"></script>
 <script>
 var soundOn = true;
 
