--- a/math/numbermandala/index.html
+++ b/math/numbermandala/index.html
@@ -245,7 +245,7 @@ input[type=checkbox] {
 
 </style>
 
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 
 <script type="text/javascript">
 
