--- a/math/shapehuntcardinality/index.html
+++ b/math/shapehuntcardinality/index.html
@@ -104,7 +104,7 @@
 
 </style>
 
-<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="js/jquery-1.9.1.min.js"></script>
 <script>
 var soundOn = true;
 
