--- a/reading/alphabeticalordersort/index.html
+++ b/reading/alphabeticalordersort/index.html
@@ -5,9 +5,9 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Alphabetical Order Sort</title>
   
-    <script type='text/javascript' src='http://code.jquery.com/jquery-2.1.3.js'></script>
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+    <script type='text/javascript' src='js/jquery-2.1.3.js'></script>
+    <link rel="stylesheet" href="css/jquery-ui.css">
+    <script src="js/jquery-ui.min.js"></script>
     <script src="js/jquery.ui.touch-punch.min.js"></script>
     <script src="js/wordfamilies.js"></script>
 
