--- a/reading/shakespeareaninsultgenerator/index.html
+++ b/reading/shakespeareaninsultgenerator/index.html
@@ -108,7 +108,7 @@
 }
 
 </style>
-<script type='text/javascript' src='http://code.jquery.com/jquery-2.1.3.js'></script>
+<script type='text/javascript' src='js/jquery-1.9.1.min.js'></script>
 <script type="text/javascript">
 var ShakespeareanInsult = function() {
 
