--- a/reading/sightwordsmemory/index.html
+++ b/reading/sightwordsmemory/index.html
@@ -232,7 +232,7 @@
 
 </style>
 
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="js/jquery-1.9.1.min.js"></script>
 <script>
 
 //http://www.mrsperkins.com/files/dolch_book.pdf
