--- a/reading/sightwordstyping/index.html
+++ b/reading/sightwordstyping/index.html
@@ -169,7 +169,7 @@
 
 </style>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script src="js/jquery-1.9.1.min.js"></script>
 <script src="js/jquery.easing.1.3.js"></script>
 <script>
 
