--- a/reading/wordcategories/index.html
+++ b/reading/wordcategories/index.html
@@ -232,7 +232,7 @@
 
 </style>
 
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="js/jquery-1.9.1.min.js"></script>
 <script src="js/wordfamilies.js"></script>
 <script>
 
