--- a/reading/wordfamilies/index.html
+++ b/reading/wordfamilies/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Word Families</title>
   
-  <script type='text/javascript' src='http://code.jquery.com/jquery-2.1.3.js'></script>
+  <script type='text/javascript' src='js/jquery-1.9.1.min.js'></script>
     <script src="js/wordfamilies.js"></script>
 
 <style type='text/css'>
