--- a/science/mastermind/index.html
+++ b/science/mastermind/index.html
@@ -279,7 +279,7 @@ input::-webkit-inner-spin-button {
 
 </style>
 
-<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="js/jquery-1.9.1.min.js"></script>
 <script>
 
 var soundOn = true;
