24 game mostly finished.

--- a/index.html
+++ b/index.html
@@ -237,6 +237,12 @@
 
             <p><a href="math/equivalencymatch/"><img src="images/equivalencymatch.png" alt="Image of Equivalency Match Game" title="" /></a></p>
 
+            <h2><a href="math/equivalencymatch/">24</a></h2>
+
+            <p>Find the sequence of operations that produces the number 24 from the four given numbers. Click "I Give Up" if you think there is no solution to see if the game can find any.</p>
+
+            <p><a href="math/24/"><img src="images/24.png" alt="Image of 24 Game" title="" /></a></p>
+
             <h2><a href="math/primefactortree/">Prime Factor Tree Generator</a></h2>
 
             <p>Slightly tweeked from original code by <a href="https://github.com/collectivecognition/primeFactorTree">William Blanchette</a>. Takes any number and breaks it down into a tree of its prime factors.</p>
