--- a/math/24/index.html
+++ b/math/24/index.html
@@ -8,7 +8,7 @@
         font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
     }
 
-    #targetNumber {
+    .stage {
         width: 100%;
         text-align: center;
         font-size: 3em;
@@ -116,8 +116,14 @@
 
 input, select
 {
-    font-size:28px;
+
+    font-size:32px;
     font-weight: bold;
+}
+
+select
+{
+  font-size:42px;
 }
 
 input::-webkit-outer-spin-button,
@@ -263,6 +269,7 @@ var evaluate = function(e, row) {
 
             if (nextrow == 2)
             {
+                $('#ans2').html('');
                 $('#eq3').html('');
                 $('#ans3').html('');
             } else if (nextrow == 3)
@@ -340,9 +347,6 @@ var findTwentyFour = function() {
     var equation;
     var solutions = [];
 
-    //TODO: This doesn't render?
-    //$("#solutions").html("Finding Solutions.");
-
     //Integers are easy, because we only use each one once.
     for (var a=0, i=0; i<integers[1].length; a++, i++) {
     for (var b=1, j=0; j<integers[1].length; b++, j++) {
@@ -409,7 +413,7 @@ var findTwentyFour = function() {
 
     if (solutions.length > 0)
     {
-        $("#solutions").html(solutions.join("<br/>"));
+        $("#solutions").html("Solutions:<br/>" + solutions.join("<br/>"));
     } else {
         $("#solutions").html("No solutions found!");
     }
@@ -423,7 +427,7 @@ $(document).ready(function() {
 </script>
 </head>
 <body>
-<div>
+<div class="stage">
     <div id="nums"></div>
     <div id="row1"><span id="eq1"></span><span id="ans1"></span></div>
     <div id="row2"><span id="eq2"></span><span id="ans2"></span></div>
@@ -434,8 +438,8 @@ $(document).ready(function() {
 <div id="footer">
     <h1 id="feedback">24</h1>
     <form>
-      <input type="button" id="giveup" onclick="findTwentyFour();" value="I Give Up" />
-      <input type="button" id="newgame" onclick="newGame();" value="New Game" />
+      <input type="button" id="giveup" onclick="findTwentyFour();" value="I Give Up" class="myButton" />
+      <input type="button" id="newgame" onclick="newGame();" value="New Game" class="myButton" />
       <input type="button" value="Sound Off" onclick="toggleSound();" class="myButton" id="soundToggle" />
     </form>
     <p>Part of the <a href="http://ideonexus.github.io/Explorable-Explanations/">Explorable Explanations</a> collection of educational javascript apps.</p>
