Mostly finished Vector Racer (renamed from Racetrack).

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
 
     <section class="main-content">
 
+        <div style="width: 90%">
+            <b>Welcome!</b> Here you will find a growing collection of javascript apps I have built or built-upon to help explain concepts and tutor my two boys in math and literacy. If you like this collection, please fork it and make it your own! Here are a few principles I try to maintain with each new app I add to the collection:
+            <ul>
+                <li>I <em>try</em> to keep them mobile-friendly as young children can interact with touch-screens easier than with a mouse and keyboard.</li>
+                <li>I put all of the main javascript, css, and html into the index.html file so that new and younger programmers can see everything in one place.</li>
+                <li>With a few exceptions, all of these are capable of loading into a browser from the local drive. This way new and budding hackers don't need to mess with setting up web servers or needing an internet connection to run them and can develop in a text editor.</li>
+            </ul>
+        </div>
+
         <div style="float:left; width: 45%">
 
             <h1>Literacy</h1>
@@ -248,6 +257,12 @@
             <p>Slightly tweeked from original code by <a href="https://github.com/collectivecognition/primeFactorTree">William Blanchette</a>. Takes any number and breaks it down into a tree of its prime factors.</p>
 
             <p><a href="math/primefactortree/"><img src="images/primefactortree.png" alt="Image of Prime Factor Tree" title="" /></a></p>
+
+            <h2><a href="math/vectorracer/">Vector Racer</a></h2>
+
+            <p>The graph-paper game <a href="https://en.wikipedia.org/wiki/Racetrack_(game)">Racetrack</a>. Good for teaching the concepts of velocity and acceleration, this game can only be mastered with mathematics. Built with code snippets from <a href="http://jsfiddle.net/m1erickson/sAFku/">m1erickson</a>, <a href="https://stackoverflow.com/questions/4672279/bresenham-algorithm-in-javascript">Boris Hamanov/Bresenham</a>, and <a href="https://codepen.io/Cthulahoop/pen/sxqpL">Cthulahoop</a>.</p>
+
+            <p><a href="math/vectorracer/"><img src="images/vectorracer.png" alt="Image of Vector Racer" title="" /></a></p>
 
             <h2><a href="math/puzzlearithmetic/">Puzzle-Piece Arithmetic</a></h2>
 
